# pytorch-plantclef

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-itac.txt  requirements.txt
notebooks/: embedding.ipynb  faiss.ipynb  setup_itac.ipynb
plantclef/: config.py  model_setup.py  plotting.py  serde.py
plantclef/embed/: transform.py  workflow.py
plantclef/torch/: data.py  model.py
scripts/: activate.sh  download_data_model.sh
tests/: conftest.py  test_classification.py  test_data.py  test_embed.py  test_model.py  test_pipeline.py  test_pl_trainer.py
