[project]
name = "plantclef"
version = "0.1.1"
authors = [{ name = "Murilo Gustineli", email = "murilogustineli@gatech.edu" }]
description = "PyTorch PlantCLEF webinar helper package"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/murilogustineli/pytorch-plantclef"
Issues = "https://github.com/murilogustineli/pytorch-plantclef/issues"

[project.scripts]
plantclef = "plantclef.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[tool.setuptools.packages.find]
where = ["."]
include = ["plantclef*"]
namespaces = false

# Optional dependencies
[project.optional-dependencies]
itac = [
    # use Intel-specific PyTorch and torchvision versions
    "torch==2.5.1+cxx11.abi",
    "torchvision==0.20.1+cxx11.abi",

    # list all dependencies EXCEPT torch and torchvision (already included in ITAC)
    "numpy==1.26.4",
    "pandas==2.2.3",
    "matplotlib==3.10.1",
    "scikit-learn==1.6.1",
    "pyarrow==19.0.1",
    "pytorch-lightning==2.5.0.post0",
    "timm==1.0.15",
    "transformers==4.49.0",
    "typer==0.15.2",
    "opencv-python==4.11.0.86",
    "scikit-image==0.25.2",
    "faiss-cpu==1.10.0",
    "tqdm==4.67.1",
    "gdown==5.2.0",

    # Developer tools
    "jupyterlab==4.3.5",
    "ruff==0.9.9",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "xmltodict==0.14.2",
    "ipywidgets==8.1.5"
]
